force-app/main/default/objects/Study_Intake_Group__c/Study_Intake_Group__c.object-meta.xml
<CustomObject>
    <description>Academic intake group to further categorize and control the capacity based on student group for a study program.</description>
    <label>Study Intake Group</label>
    <nameField>
        <label>Study Intake Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Intake Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>