force-app/main/default/objects/Study_Intake_Group__c/fields/Booked_Places__c.field-meta.xml
<CustomField>
    <fullName>Booked_Places__c</fullName>
    <label>Booked Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>