force-app/main/default/objects/Study_Intake_Group__c/fields/Reviewing_Applications__c.field-meta.xml
<CustomField>
    <fullName>Reviewing_Applications__c</fullName>
    <label>Reviewing Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>