force-app/main/default/objects/Study_Intake_Group__c/fields/Sample_Record_Code__c.field-meta.xml
<CustomField>
    <fullName>Sample_Record_Code__c</fullName>
    <description>Track the id for demo record.</description>
    <inlineHelpText>Track the id for demo record.</inlineHelpText>
    <label>Sample Record Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>