force-app/main/default/objects/Study_Intake_Group__c/fields/Study_Intake__c.field-meta.xml
<CustomField>
    <fullName>Study_Intake__c</fullName>
    <label>Study Intake</label>
    <referenceTo>Study_Intake__c</referenceTo>
    <relationshipLabel>Study Intake Groups</relationshipLabel>
    <relationshipName>Study_Intake_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>