force-app/main/default/objects/Study_Intake_Group__c/fields/Submitted_Applications__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Applications__c</fullName>
    <description>Number of submitted applications.</description>
    <inlineHelpText>Number of submitted applications.</inlineHelpText>
    <label>Submitted Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>